@@ -1,0 +1,15 @@
+film.width = 1280
+film.height = 960
+path.pathdepth.total = 1
+scene.file = scenes/bump/bump-terminator.scn
+opencl.cpu.use = 1
+opencl.gpu.use = 1
+#opencl.platform.index = 0
+opencl.gpu.workgroup.size = 64
+screen.refresh.interval = 100
+path.maxdepth = 5
+path.russianroulette.depth = 5
+# Film image pipeline plug-ins
+film.imagepipeline.0.type = TONEMAP_LINEAR
+film.imagepipeline.1.type = GAMMA_CORRECTION
+film.imagepipeline.1.value = 2.2
