@@ -1,0 +1,57 @@
+#scene.camera.lookat = 7.481132 -6.50764 5.343665 0.932513 -0.400984 0.891212
+##
+scene.camera.type = "perspective"
+scene.camera.lookat.orig = 3.44613528 -3.12874079 3.84999728
+scene.camera.lookat.target = -3.62997079 3.01577091 0.360916853
+scene.camera.up = 0 0 1
+scene.camera.autofocus.enable = 0
+scene.camera.fieldofview = 45
+################################################################################
+#scene.textures.normalmap.file = scenes/bump/normal.png
+#scene.textures.normalmap.gamma = 1.0
+#scene.textures.normalmap.mapping.uvscale = 2 2
+##
+#scene.textures.bumpmap.file = scenes/bump/map2.png
+#scene.textures.bumpmap.gamma = 1.0
+#scene.textures.bumpmap.mapping.uvscale = 6 6
+##
+scene.textures.bumpmap.type = fbm
+scene.textures.bumpmap.octaves = 8
+scene.textures.bumpmap.omega = 0.5
+scene.textures.bumpmap.mapping.type = globalmapping3d
+scene.textures.bumpmap.mapping.transformation = 20.0 0.0 0.0 0.0  0.0 20.0 0.0 0.0  0.0 0.0 20.0 0.0  0.0 0.0 0.0 1.0
+##
+scene.textures.scaled_bumpmap.type = scale
+scene.textures.scaled_bumpmap.texture1 = 0.01
+scene.textures.scaled_bumpmap.texture2 = bumpmap
+################################################################################
+#scene.materials.mat_light.type = matte
+#scene.materials.mat_light.emission = 20. 20. 20.
+#scene.materials.mat_light.kd = 0.0 0.0 0.0
+#scene.materials.mat_light2.type = matte
+#scene.materials.mat_light2.emission = light2
+#scene.materials.mat_light2.kd = 0.0 0.0 0.0
+scene.materials.mat_red.type = matte
+scene.materials.mat_red.kd = 0.7 0.7 0.7
+scene.materials.mat_red.bumptex = scaled_bumpmap
+scene.materials.mat_white.type = matte
+scene.materials.mat_white.kd = 0.8 0.8 0.8
+#scene.materials.mat_white.normaltex = normalmap
+################################################################################
+#scene.objects.obj_light.ply = scenes/bump/mat_light.ply
+#scene.objects.obj_light.material = mat_light
+#scene.objects.obj_light2.ply = scenes/bump/mat_light2.ply
+#scene.objects.obj_light2.material = mat_light2
+scene.objects.obj_red.ply = scenes/bump/sphere.ply
+scene.objects.obj_red.material = mat_red
+scene.objects.obj_white.ply = scenes/bump/mat_white.ply
+scene.objects.obj_white.material = mat_white
+################################################################################
+scene.lights.l1.type = point
+scene.lights.l1.position = 4 4 10
+scene.lights.l1.gain = 1500 1500 1500
+##
+#scene.lights.l1.type = sphere
+#scene.lights.l1.position = 4 4 10
+#scene.lights.l1.radius = 3
+#scene.lights.l1.gain = 1500 1500 1500
