@@ -1,7 +1,7 @@
 film.width = 1200
 film.height = 1200
 scene.file = scenes/cornell/cornell-terminator.scn
-path.pathdepth.total = 5
+path.pathdepth.total = 1
 ##
 film.imagepipelines.0.0.type = TONEMAP_LINEAR
 film.imagepipelines.0.0.scale = 1.5
