@@ -48,7 +48,8 @@ void BSDF::Init(const bool fixedFromLight, const Scene &scene, const Ray &ray,
 
 	// Interpolate face normal
 	hitPoint.geometryN = mesh->GetGeometryNormal(ray.time, rayHit.triangleIndex);
-	hitPoint.shadeN = mesh->InterpolateTriNormal(ray.time, rayHit.triangleIndex, rayHit.b1, rayHit.b2);
+	hitPoint.interpolatedN = mesh->InterpolateTriNormal(ray.time, rayHit.triangleIndex, rayHit.b1, rayHit.b2);
+	hitPoint.shadeN = hitPoint.interpolatedN;
 	hitPoint.intoObject = (Dot(ray.d, hitPoint.geometryN) < 0.f);
 
 	// Set interior and exterior volumes
@@ -98,6 +99,7 @@ void BSDF::Init(const bool fixedFromLight, const Scene &scene, const luxrays::Ra
 	material = &volume;
 
 	hitPoint.geometryN = Normal(-ray.d);
+	hitPoint.interpolatedN = hitPoint.geometryN;
 	hitPoint.shadeN = hitPoint.geometryN;
 	CoordinateSystem(Vector(hitPoint.shadeN), &hitPoint.dpdu, &hitPoint.dpdv);
 	hitPoint.dndu = hitPoint.dndv = Normal(0.f, 0.f, 0.f);
@@ -150,19 +152,19 @@ Spectrum BSDF::EvaluateTotal() const {
 //------------------------------------------------------------------------------
 
 // Return alpha ^2 parameter from normal divergence
-//static float ShadowTerminatorAvoidanceAlpha2(const Normal &Ng, const Normal &Ns) {
-//	const float cos_d = Min(fabsf(Dot(Ng , Ns)), 1.f);
+//static float ShadowTerminatorAvoidanceAlpha2(const Normal &Ni, const Normal &Ns) {
+//	const float cos_d = Min(fabsf(Dot(Ni , Ns)), 1.f);
 //	const float tan2_d = (1.f - cos_d * cos_d) / (cos_d * cos_d);
 //
 //	return Clamp(.125f * tan2_d, 0.f, 1.f);
 //}
 
 // Shadowing factor
-//static float ShadowTerminatorAvoidanceFactor(const Normal &Ng, const Normal &Ns,
+//static float ShadowTerminatorAvoidanceFactor(const Normal &Ni, const Normal &Ns,
 //		const Vector &lightDir) {
-//	const float alpha2 = ShadowTerminatorAvoidanceAlpha2(Ng, Ns);
+//	const float alpha2 = ShadowTerminatorAvoidanceAlpha2(Ni, Ns);
 //	if (alpha2 > 0.f) {
-//		const float cos_i = Max(fabsf(Dot(Ng , lightDir)), 1e-6f);
+//		const float cos_i = Max(fabsf(Dot(Ni , lightDir)), 1e-6f);
 //		const float tan2_i = (1.f - cos_i * cos_i) / (cos_i * cos_i);
 //
 //		return 2.f / (1.f + sqrtf(1.f + alpha2 * tan2_i));
@@ -176,23 +178,25 @@ Spectrum BSDF::EvaluateTotal() const {
 // https://www.yiningkarlli.com/projects/shadowterminator.html
 //------------------------------------------------------------------------------
 
-//static float ShadowTerminatorAvoidanceFactor(const Normal &Ng, const Normal &Ns,
-//		const Vector &lightDir) {
-//	const float dotNsLightDir = Dot(Ns, lightDir);
-//	if (dotNsLightDir <= 0.f)
-//		return 0.f;
-//
-//	const float dotNgNs = Dot(Ng, Ns);
-//	if (dotNgNs <= 0.f)
-//		return 0.f;
-//
-//	const float G = Min(1.f, Dot(Ng, lightDir) / (dotNsLightDir * dotNgNs));
-//	
-//	const float G2 = G * G;
-//	const float G3 = G2 * G;
-//
-//	return -G3 + G2 + G;
-//}
+static float ShadowTerminatorAvoidanceFactor(const Normal &Ni, const Normal &Ns,
+		const Vector &lightDir) {
+	const float dotNsLightDir = Dot(Ns, lightDir);
+	if (dotNsLightDir <= 0.f)
+		return 0.f;
+
+	const float dotNiNs = Dot(Ni, Ns);
+	if (dotNiNs <= 0.f)
+		return 0.f;
+
+	const float G = Min(1.f, Dot(Ni, lightDir) / (dotNsLightDir * dotNiNs));
+	if (G <= 0.f)
+		return 0.f;
+	
+	const float G2 = G * G;
+	const float G3 = G2 * G;
+
+	return -G3 + G2 + G;
+}
 
 Spectrum BSDF::Evaluate(const Vector &generatedDir,
 		BSDFEvent *event, float *directPdfW, float *reversePdfW) const {
@@ -231,12 +235,14 @@ Spectrum BSDF::Evaluate(const Vector &generatedDir,
 	Spectrum result = material->Evaluate(hitPoint, localLightDir, localEyeDir,
 			event, directPdfW, reversePdfW);
 	assert (!result.IsNaN() && !result.IsInf());
+	if (result.Black())
+		return result;
 
-	if (!result.Black() && !IsVolume()) {
+	if (!IsVolume()) {
 		// Shadow terminator artefact avoidance
-//		if ((*event & (DIFFUSE | GLOSSY)) && (hitPoint.shadeN != hitPoint.geometryN))
-//			result *= ShadowTerminatorAvoidanceFactor(hitPoint.GetLandingGeometryN(),
-//					hitPoint.GetLandingShadeN(), lightDir);
+		if ((*event & (DIFFUSE | GLOSSY)) && (hitPoint.shadeN != hitPoint.interpolatedN))
+			result *= ShadowTerminatorAvoidanceFactor(hitPoint.GetLandingInterpolatedN(),
+					hitPoint.GetLandingShadeN(), lightDir);
 
 		// Adjoint BSDF (not for volumes)
 		if (hitPoint.fromLight)
@@ -279,6 +285,14 @@ Spectrum BSDF::Sample(Vector *sampledDir,
 
 	*absCosSampledDir = fabsf(CosTheta(localSampledDir));
 	*sampledDir = frame.ToWorld(localSampledDir);
+
+	// Shadow terminator artefact avoidance
+	if ((*event & (DIFFUSE | GLOSSY)) && (hitPoint.shadeN != hitPoint.interpolatedN)) {
+		const Vector &lightDir = hitPoint.fromLight ? hitPoint.fixedDir : (*sampledDir);
+
+		result *= ShadowTerminatorAvoidanceFactor(hitPoint.GetLandingInterpolatedN(),
+				hitPoint.GetLandingShadeN(), lightDir);
+	}
 
 	// Adjoint BSDF
 	if (hitPoint.fromLight) {
