@@ -45,7 +45,7 @@ using namespace slg;
 size_t PathOCLBaseOCLRenderThread::GetOpenCLHitPointSize() const {
 	// HitPoint memory size
 	size_t hitPointSize = sizeof(Vector) + sizeof(Point) + sizeof(UV) +
-			2 * sizeof(Normal) + sizeof(Matrix4x4);
+			3 * sizeof(Normal) + sizeof(Matrix4x4);
 	if (renderEngine->compiledScene->IsTextureCompiled(HITPOINTCOLOR) ||
 			renderEngine->compiledScene->IsTextureCompiled(HITPOINTGREY) ||
 			renderEngine->compiledScene->hasTriangleLightWithVertexColors)
