@@ -107,6 +107,7 @@ float HomogeneousVolume::Scatter(const Ray &ray, const float u,
 		UV(),
 		Normal(-ray.d),
 		Normal(-ray.d),
+		Normal(-ray.d),
 		Spectrum(1.f),
 		Vector(0.f, 0.f, 0.f), Vector(0.f, 0.f, 0.f),
 		Normal(0.f, 0.f, 0.f), Normal(0.f, 0.f, 0.f),
