@@ -56,6 +56,7 @@
 ''Beta3 released''
 
 * Improved shading with interpolated normals
+* Added the support for Shadow Terminator avoidance factor when using bump mapping
 
 ### Fixed Bugs
 
